fixed header padding issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -399,7 +399,4 @@ a[ng-click]{
 	.main-menu-text{
 		display:none;
 	}
-	.header{
-		padding:1em 5em;
-	}
 }
